generation depuis google drive terminee et fonctionnelle sauf pour 1 binome

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ VideoGenTransformer/web/
 VideoGenTransformer/playlists/
 VideoGenTransformer/gifs/
 VideoGenTransformer/bin/
+VideoGenTransformer/drive/
